# palma

./: .buildinfo  .coveragerc  .gitignore  MANIFEST.in  README.md  components.html  concept.html  contributing.html  genindex.html  index.html  model.evaluation.html  model.selector.html  modules.html  objects.inv  palma.base.html  palma.components.html  palma.html  palma.preprocessing.html  palma.utils.html  project.html  py-modindex.html  pyproject.toml  requirements.txt  requirements_components.txt  search.html  searchindex.js
.doctrees/: components.doctree  concept.doctree  contributing.doctree  environment.pickle  index.doctree  model.evaluation.doctree  model.selector.doctree  modules.doctree  palma.base.doctree  palma.components.doctree  palma.doctree  palma.preprocessing.doctree  palma.utils.doctree  project.doctree
.doctrees/autoapi/: index.doctree
.github/workflows/: .publish_doc.yml  publish.yml  publish_doc.yml  pytest.yml  pytest_vanilla.yml
_sources/: components.rst.txt  concept.rst  index.rst  model.evaluation.rst  model.selector.rst  palma.base.rst.txt  palma.components.rst  palma.rst  palma.utils.rst  project.rst
_sources/autoapi/: index.rst
autoapi/: index.html
autoapi/palma/: index.html
doc/: component.drawio  components.md  hyperopt.drawio
docs/source/: components.rst  concept.rst  conf.py  contributing.rst  index.rst  model.selector.rst  modules.rst  palma.preprocessing.rst  project.rst  tests.rst  tests.test_component.rst  tests.test_project.rst  tests.test_utils.rst  tests.tests_base.rst
examples/: automl.ipynb  classification.ipynb  classification_threshold.ipynb  classification_threshold.py  deepcheck.ipynb  logger.ipynb  mlflow_logger.ipynb  regression.ipynb
palma/: __init__.py
palma/automl/: __init__.py  automl.py
palma/base/: engine.py  model.py  model_selection.py  project.py  splitting_strategy.py
palma/components/: __init__.py  base.py  checker.py  dashboard.py  data_checker.py  data_profiler.py  logger.py  performance.py  shap.py
palma/datasets/: __init__.py
palma/preprocessing/: autoencoder.py  pca.py
palma/utils/: __init__.py  checker.py  names.py  plotting.py  utils.py
tests/: conftest.py  requirements.txt  test_utils_.py
tests/test_automl/: test_automl.py
tests/test_component/: test_checker.py  test_data_checker.py  test_explainer_dashboard.py  (+5 more)
(+121 files in other folders)
