[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "palma"
version = "2024.1.1"
description = ""
authors = [{ name = 'Vincent Laurent', email = 'vlaurent@eurobios.com' }]
readme = "README.md"

requires-python = '>=3.9'
dependencies = [] # Dependencies will be loaded from requirements.txt

[project.optional-dependencies]
components = {file = ["requirements_components.txt"]}
test = {file = ["tests/requirements.txt"]}
doc = ["sphinx", "sphinx-book-theme", "myst-parser", "sphinx-copybutton",
       "sphinx-favicon", "nbsphinx",
       "sphinx-autoapi", "sphinx-version-warning", "sphinx-prompt",
       "numpydoc"]
