[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "palma"
version = "2025.1.1"
description = ""
authors = [{ name = 'Vincent Laurent', email = 'vincent.laurent@mews-labs.com' }]
readme = "README.md"
dynamic = ["dependencies", "optional-dependencies"]
requires-python = '>=3.9'

[tool.setuptools.packages.find]
where = ["."]
include = ["palma"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies.components = {file = ["requirements_components.txt"]}
optional-dependencies.test = {file = ["tests/requirements.txt"]}

#[project.optional-dependencies]
#
#
#doc = ["sphinx", "sphinx-book-theme", "myst-parser", "sphinx-copybutton",
#       "sphinx-favicon", "nbsphinx",
#       "sphinx-autoapi", "sphinx-version-warning", "sphinx-prompt",
#       "numpydoc"]
